added members, created Former Members section

--- a/index.html
+++ b/index.html
@@ -620,34 +620,22 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/Aliza Shoot One-343.jpg" alt=""></div>
                     </div>
                     <div class="info">
-                        <br/>
-                        <br/>
+                        Aliza Lena Selter, <br/>mHealth Research Coordinator
                     </div>
                 </div>
             </div>
-
         </div>
 
+        <br/>
+        <br/>
         <br/>
         <h5> Technologists-in-Residence</h5>
         <div class="members">
             <div class="member-wrapper">
                 <div class="member-wrapper">
-                    <div class="member">
-                        <div class="photo-wrapper">
-                            <div><img src="startup/common-files/img/crew/aaron-b.png" alt=""></div>
-
-                        </div>
-                        <div class="info">
-                            Aaron Baum
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
                         <div><img src="startup/common-files/img/crew/michael-c.png" alt=""></div>
@@ -657,6 +645,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
@@ -667,14 +656,10 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="members">
             <div class="member-wrapper">
-                <div class="member-wrapper">
                     <div class="member">
                         <div class="photo-wrapper">
                             <div><img src="startup/common-files/img/crew/neil_l.jpg" alt=""></div>
-
                         </div>
                         <div class="info">
                             Neil Lakin
@@ -682,32 +667,10 @@
                     </div>
                 </div>
             </div>
-            <div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
-                    </div>
-                    <div class="info">
-                        <br/>
-                        <br/>
-                    </div>
-                </div>
-            </div>
-            <div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
-                    </div>
-                    <div class="info">
-                        <br/>
-                        <br/>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-
         <br/>
+        <br/>
+        <br/>
+
         <h5> PhD Students</h5>
         <div class="members">
             <div class="member-wrapper">
@@ -764,8 +727,7 @@
                         <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
                     </div>
                     <div class="info">
-                        <br/>
-                        <br/>
+                        Hongyi Wen
                     </div>
                 </div>
             </div>
@@ -781,8 +743,10 @@
                 </div>
             </div>
         </div>
-
         <br/>
+        <br/>
+        <br/>
+
         <h5>Software Collaborators</h5>
         <div class="members">
             <div class="member-wrapper">
@@ -801,10 +765,10 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/judy-w.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
                     </div>
                     <div class="info">
-                        Judy Wu
+                    
                     </div>
                 </div>
             </div>
@@ -822,7 +786,86 @@
          </div>
 
         <br/>
+        <br/>
+        <br/>
         <h5> Masters Students</h5>
+        <div class="members">
+            <div class="member-wrapper">
+                <div class="member-wrapper">
+                    <div class="member">
+                        <div class="photo-wrapper">
+                            <div><img src="startup/common-files/img/crew/yanbo.JPG" alt=""></div>
+
+                        </div>
+                        <div class="info">
+                            Yanbo Li
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/rachel.JPG" alt=""></div>
+                    </div>
+                    <div class="info">
+                        Rachel Ruiheng Wang
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        <!--name-->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br/>
+        <br/>
+        <br/>
+        <h5>Former Members</h5>
+        <div class="members">
+            <div class="member-wrapper">
+                <div class="member-wrapper">
+                    <div class="member">
+                        <div class="photo-wrapper">
+                            <div><img src="startup/common-files/img/crew/aaron-b.png" alt=""></div>
+
+                        </div>
+                        <div class="info">
+                            Aaron Baum
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/judy-w.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                         Judy Wu
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        Lucky Gunasekara
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br/>
+
         <div class="members">
             <div class="member-wrapper">
                 <div class="member-wrapper">
@@ -840,25 +883,24 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/yanbo.JPG" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
                     </div>
                     <div class="info">
-                        Yanbo Li
+                        <!--name-->
                     </div>
                 </div>
             </div>
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/rachel.JPG" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
                     </div>
                     <div class="info">
-                        Rachel Ruiheng Wang
+                         <!-- name-->
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     <!--/.container-->
 </section>
 
