--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/pirate.jpg" alt=""></div>
                     </div>
                     <div class="info">
                         Lucky Gunasekara
