--- a/index.html
+++ b/index.html
@@ -806,15 +806,15 @@
                 </div>
             </div>
             <div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/rachel.jpg" alt=""></div>
-                    </div>
-                    <div class="info">
-                        Rachel Ruiheng Wang
+                    <div class="member">
+                        <div class="photo-wrapper">
+                            <div><img src="startup/common-files/img/crew/rachel.JPG" alt=""></div>
+                        </div>
+                        <div class="info">
+                            Rachel Ruiheng Wang
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
             <div class="members">
             <div class="member-wrapper">
@@ -822,7 +822,6 @@
                     <div class="member">
                         <div class="photo-wrapper">
                             <div><img src="startup/common-files/img/crew/Yating.jpg" alt=""></div>
-
                         </div>
                         <div class="info">
                             Yating Zhan
