few updates with css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <img src="img/sdl_logo.png" style="width: 50px;"/>
+                <img src="img/sdl_logo.png" style="width: 50px; margin-left: -15px; margin-right: 30px;"/>
                 <a class="navbar-brand page-scroll" href="#page-top">small data lab </a>
             </div>
 
@@ -83,7 +83,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome</div>
                 <div class="intro-heading">small data lab @ Cornell Tech</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#services" class="page-scroll btn btn-xl" style="color: black;">Tell Me More</a>
             </div>
         </div>
     </header>
@@ -426,7 +426,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
+                    <h2 class="section-heading" style="color: #fff;">Contact Us</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
