--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <img src="img/portfolio/golden.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Golden</h4>
+                        <h4>Immersive recommendation</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                         <img src="img/portfolio/escape.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Escape</h4>
+                        <h4>Ancile</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
@@ -225,7 +225,7 @@
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Dreams</h4>
+                        <h4>Takeout</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
@@ -251,8 +251,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4><a style="color: black;" href="http://www.cs.cornell.edu/~ylongqi/paper/YangFJHE17.pdf">Personalizing Software and Web Services by Integrating Unstructured Application Usage Traces</a></h4>
-                                    <h5 class="subheading">Longqi Yang, Chen Fang, Hailin Jin, Matthew D. Hoffman, Deborah Estrin</h5>WWW 2017
+                                    <h4 class="subheading"><a style="color: black;" href="http://www.cs.cornell.edu/~ylongqi/paper/YangFJHE17.pdf">Personalizing Software and Web Services by Integrating Unstructured Application Usage Traces</a></h4>
+                                    <h6 class="subheading">Longqi Yang, Chen Fang, Hailin Jin, Matthew D. Hoffman, Deborah Estrin</h5>WWW 2017
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Users of software applications generate vast amounts of unstructured log-trace data. These traces contain hidden clues to the intentions and interests of those users, but service providers may find it difficult to uncover and exploit those clues. In this paper, we propose a framework for personalizing software and web services by leveraging such unstructured traces.</p>
@@ -265,15 +265,16 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+
+                                    <h4 class="subheading">Collaborative Metric Learning</h4>
+                                    <h5>HSIEH, C.H., YANG, L., CUI, Y., LIN, T.Y., BELONGIE, S., ESTRIN, D.</h5>WWW 2017
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Metric learning algorithms produce distance metrics that capture the important relationships among data. In this work, we study the connection between metric learning and collaborative filtering. We propose Collaborative Metric Learning (CML) that learns a joint metric space to encode not only users' preferences but also the user-user and item-item similarity. Our proposed algorithm outperforms the state-of-the-art collaborative filtering algorithms on a wide range of recommendation tasks and is able to uncover the underlying spectrum of users' fine-grained preferences. Finally, we demonstrate that CML can achieve significant speedup for Top-K recommendation tasks through off-the-shelf approximate nearest neighbor search with negligible accuracy reduction.</p>
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
@@ -326,7 +327,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <a href="http://destrin.smalldata.io/"><img src="img/team/deborah.png" class="img-responsive img-circle" alt=""></a>
+                        <a href="http://destrin.smalldata.io/"><img src="img/team/deborah-2.png" class="img-responsive img-circle" alt=""></a>
                         <h4>Deborah Estrin</h4>
                         <p class="text-muted">Director</p>
                         <ul class="list-inline social-buttons">
@@ -341,7 +342,22 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/image.png" class="img-responsive img-circle" alt="">
+                        <a href=""><img src="img/team/JP2.png" class="img-responsive img-circle" alt=""></a>
+                        <h4>JP Polak</h4>
+                        <p class="text-muted">Senior Researcher in residence</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-user-circle"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/Michael.png" class="img-responsive img-circle" alt="">
                         <h4>Michael Sobolev</h4>
                         <p class="text-muted">Chief Scientist</p>
                         <ul class="list-inline social-buttons">
@@ -356,9 +372,9 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
+                        <img src="img/team/andy.png" class="img-responsive img-circle" alt="">
+                        <h4>Chen-Kang Hsieh</h4>
+                        <p class="text-muted">Post-Doc Student</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -371,9 +387,9 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
+                        <img src="img/team/faisal-a.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Faisal Alquaddoomi</h4>
+                        <p class="text-muted">PhD Student</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -384,6 +400,67 @@
                         </ul>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/fabian.png" class="img-responsive img-circle" alt="">
+                        <h4>Fabian Okeke</h4>
+                        <p class="text-muted">PhD Student</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/longqi.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Longqi Yang</h4>
+                        <p class="text-muted">PhD Student</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/hongyi.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Hongyi Wen</h4>
+                        <p class="text-muted">PhD Student</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="img/team/eugene.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Eugene Bagdasaryan</h4>
+                        <p class="text-muted">PhD Student</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
