--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
 
-                        <a href="http://ebagdasa.me"><img src="img/team/yulia.png" class="img-responsive img-circle" alt=""></a>
+                        <a href=""><img src="img/team/yulia.png" class="img-responsive img-circle" alt=""></a>
                         <h4>Yulia Reznik</h4>
                         <p class="text-muted">Intern</p>
 
@@ -431,7 +431,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
 
-                        <a href="http://ebagdasa.me"><img src="img/team/josh.png" class="img-responsive img-circle" alt=""></a>
+                        <a href=""><img src="img/team/josh.png" class="img-responsive img-circle" alt=""></a>
                         <h4>Josh Gruenstein</h4>
                         <p class="text-muted">Intern</p>
 
