--- a/index.html
+++ b/index.html
@@ -437,6 +437,16 @@
 
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+
+                        <a href="#pastmembers" class="portfolio-link" data-toggle="modal"><img src="img/team/past.png" class="img-responsive img-circle" alt=""></a>
+                        <h4></h4>
+                        <p class="text-muted"></p>
+
+                    </div>
+                </div>
+
 
             </div>
             <div class="row">
@@ -824,6 +834,34 @@ The ultimate goal is that the DMT will eventually lead to non-invasive mobile in
             </div>
         </div>
     </div>
+
+        <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal modal fade" id="pastmembers" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href="http://ebagdasa.me"><img style="height: 225px;" src="img/team/aliza.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>ALiza</h4>
+                                <p class="text-muted" style="text-align: center">PhD Student</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Portfolio Modal 4 -->
     <div class="portfolio-modal modal fade" id="ancile" tabindex="-1" role="dialog" aria-hidden="true">
